rewrite token balance
